--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <style>
     body {
+        background-color: #000;
+    }
+    .content {
         background: black;
         display: flex;
         align-items: center;
         justify-content: center;
+        position: relative;
     }
     p {
         position: absolute;
@@ -14,15 +18,33 @@
         text-align: center;
         bottom: 20%;
     }
+    .mobile {
+        visibility: hidden;
+    }
+    .mobile-text {
+        font-size: 24px;
+        color: white;
+    }
     @media (max-width: 800px) {
-        .body {
-            align-items: self-start;
+        .content {
+            display: none;
+        }
+        .mobile {
+            visibility: visible;
         }
     }
 </style>
-<canvas></canvas>
-<p id="text">test text</p>
-
+<head>  
+    <meta property='og:image' content='https://imageholder.netlify.app/imgs/portfolio2d.png' /></head>
+    <meta property='og:title' content='Davit Spanderashvili Portfolio Website'/>
+    <meta name='description' content='Portfolio website for Davit Spanderashvili React.js / Next.js front-end developer '></meta>
+<div class="content">
+    <canvas></canvas>
+    <p id="text">test text</p>
+</div>
+<div class="mobile">
+    <p class="mobile-text">Site uses canvas for 2D game please open Url with laptop</p>
+</div>
 <script
     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
     integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ=="
