--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     }
 </style>
 <head>  
-    <meta property='og:image' content='https://imageholder.netlify.app/imgs/portfolio2d.png' /></head>
+    <meta property='og:image' content='https://imageholder.netlify.app/imgs/portfolio2d.png' />
     <meta property='og:title' content='Davit Spanderashvili Portfolio Website'/>
     <meta name='description' content='Portfolio website for Davit Spanderashvili React.js / Next.js front-end developer '></meta>
+    </head>
 <div class="content">
     <canvas></canvas>
     <p id="text">test text</p>
